2001-08-11  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl-proxy.c (main): Fix typo causes
	O_NONBLOCK to to be set.

	* src/soup-core/soup-ssl.c (soup_ssl_get_iochannel): Ditto.

2001-08-10  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Include sys/socket.h for sa in
	SoupAddress.

2001-08-08  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.4.3.

2001-08-08  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_chunk):
	Handle entity headers after chunk body, closes bug #6846.

	* src/soup-core/soup-queue.c (soup_queue_read_done_cb): Fixup comments.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-private.h: Define VERSION to "Win/0.4.2" for
	Windows clients.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Remove
	warning used for testing.
	(soup_transfer_write_cb): Ditto.

2001-08-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-transfer.c (soup_transfer_read_cb): Read
	speedup to read all available data before processing and returning
	to the mainloop.

	* src/soup-core/soup-message.h: Add defines for standard DAV methods.

2001-07-31  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_get_request_header): Remove
	special case for GET and HEAD when adding content-length header.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.4.2.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_queue_read_headers_cb):
	Content-length should be avoided for HEAD requests.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-misc.c (soup_load_config_internal): Fix bug
	where only the first valid config token is loaded from the config file.

2001-07-30  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new_cb): Fix dangling